--- a/index.html
+++ b/index.html
@@ -5,182 +5,310 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Fancy Pony — Artwork Submission</title>
 <style>
-  body{
-    margin:0;
-    font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  :root {
+    --brand:#111827;          /* text */
+    --accent:#2563eb;         /* buttons */
+    --surface:#ffffff;        /* cards/forms */
+    --muted:#6b7280;
+    --ok:#046c4e;
+    --err:#b91c1c;
+  }
+
+  /* Repeat tiny pony background */
+  body {
+    margin: 0;
+    font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+    color: var(--brand);
     background: url("https://i.postimg.cc/jSmGH445/Pony.png") repeat;
-    background-size: 220px 220px;
+    background-size: 160px 160px; /* tile size */
   }
-  .wrap{ max-width:800px; margin:32px auto; padding:16px; }
-  .card{ background:#fff; border-radius:12px; box-shadow:0 8px 24px rgba(0,0,0,.08); padding:18px; }
-  h1{ margin:0 0 8px; font-size:clamp(24px,3.2vw,34px); }
-  .muted{ color:#6b7280; font-size:13px; }
-  label{ font-weight:600; display:block; margin:.6rem 0 .25rem; }
-  input[type="text"], input[type="email"], input[type="file"], textarea{
-    width:100%; box-sizing:border-box; padding:.7rem .75rem; border:1px solid #d1d5db; border-radius:8px; font-size:15px; background:#fff;
+
+  .wrap {
+    max-width: 760px;          /* ~70% of big screens */
+    width: 92%;
+    margin: 24px auto 56px;
   }
-  textarea{ min-height:110px; resize:vertical; }
-  .consent{ display:flex; align-items:flex-start; gap:.6rem; margin-top:.6rem; }
-  .consent input{ margin-top:.2rem; }
-  button{ display:inline-flex; align-items:center; gap:.5rem; margin-top:10px; padding:.7rem 1.2rem; border:0; border-radius:10px; background:#2563eb; color:#fff; font-weight:700; cursor:pointer; box-shadow:0 6px 14px rgba(37,99,235,.25); }
-  button[disabled]{ opacity:.65; cursor:not-allowed; }
-  .dots{ display:inline-block; width:1.25em; text-align:left; }
-  .dots::after{ content:""; animation:dots 1.2s steps(3,end) infinite; }
-  @keyframes dots{ 0%{content:""} 33%{content:"."} 66%{content:".."} 100%{content:"..."} }
-  .status{ margin-top:10px; min-height:1.25rem; }
-  .ok{ color:#065f46; background:#ecfdf5; border:1px solid #a7f3d0; padding:8px 10px; border-radius:8px; display:inline-block; }
-  .err{ color:#991b1b; background:#fef2f2; border:1px solid #fecaca; padding:8px 10px; border-radius:8px; display:inline-block; }
-  .counter{ margin:14px 0 8px; font-weight:600; }
-  .gwrap{ margin-top:18px; }
-  .gtitle{ font-size:22px; font-weight:800; margin:8px 0 10px; text-align:center; }
-  .grid{ display:grid; grid-template-columns:repeat(auto-fill,minmax(170px,1fr)); gap:14px; }
-  .gcard{ background:#fff; border:1px solid #e5e7eb; border-radius:10px; overflow:hidden; display:flex; flex-direction:column; }
-  .ph{ aspect-ratio:1/1; background:#f3f4f6; }
-  .gcard img{ width:100%; height:100%; object-fit:cover; display:block; background:#f8fafc; }
-  .gcap{ padding:8px 10px; font-size:13px; color:#374151; }
-  .by{ color:#6b7280; }
-  .empty{ color:#6b7280; text-align:center; padding:14px 0; }
-  .topline{ display:flex; align-items:baseline; justify-content:space-between; gap:12px; }
+
+  h1 {
+    margin: 0 0 10px;
+    font-size: clamp(26px, 3.2vw, 36px);
+  }
+
+  .counter {
+    color: var(--muted);
+    margin-bottom: 18px;
+  }
+
+  .card {
+    background: var(--surface);
+    border-radius: 14px;
+    box-shadow: 0 6px 18px rgba(0,0,0,.08);
+    padding: 14px;
+  }
+
+  label { font-weight: 600; display:block; margin: 12px 0 6px; }
+  input[type="text"], input[type="email"], input[type="file"], textarea {
+    width: 100%; box-sizing: border-box;
+    border: 1px solid #d1d5db; border-radius: 10px;
+    padding: 10px 12px; font-size: 15px;
+    background: #fff;
+  }
+  textarea { min-height: 110px; resize: vertical; }
+
+  .consent { display:flex; gap:10px; align-items:flex-start; margin-top: 10px; }
+  .consent input { transform: translateY(2px); }
+
+  .row { display:block; } /* stacked fields */
+
+  .help { color:var(--muted); font-size: 13px; margin-top: 6px; }
+
+  .btn {
+    display:inline-flex; align-items:center; gap:.5rem;
+    background: var(--accent); color:#fff; border:0; border-radius: 10px;
+    padding: 10px 16px; font-weight:700; cursor: pointer;
+    margin-top: 12px;
+  }
+  .btn[disabled] { opacity:.6; cursor:not-allowed; }
+  .spinner::after { content: '…'; animation: dots 1.1s steps(3,end) infinite; }
+  @keyframes dots { 0%{content:''} 33%{content:'.'} 66%{content:'..'} 100%{content:'...'} }
+
+  .note-ok { color:var(--ok); margin-top: 10px; }
+  .note-err{ color:var(--err); margin-top: 10px; }
+
+  /* Gallery */
+  .gallery {
+    background: var(--surface);
+    border-radius: 14px; box-shadow: 0 6px 18px rgba(0,0,0,.07);
+    margin-top: 26px; padding: 18px;
+  }
+  .gallery h2 { text-align:center; margin: 8px 0 16px; }
+  .grid {
+    display:grid;
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    gap: 16px;
+  }
+  figure.card {
+    margin:0; padding:10px; border-radius:12px; box-shadow: 0 2px 10px rgba(0,0,0,.05);
+    display:flex; flex-direction:column;
+  }
+  figure.card img {
+    width:100%; aspect-ratio: 3 / 4; object-fit: cover; border-radius: 8px; background:#f3f4f6;
+  }
+  figure.card figcaption {
+    font-size: 14px; margin-top: 8px;
+  }
+  .by { color: var(--muted); }
+
+  .sr { position:absolute; left:-9999px; }
 </style>
 </head>
 <body>
-<div class="wrap">
-  <div class="topline">
+  <main class="wrap">
     <h1>Fancy Pony — Artwork Submission</h1>
-    <div class="counter">Total drawings collected: <span id="count">—</span></div>
-  </div>
+    <div class="counter">Total drawings collected: <span id="count">…</span></div>
 
-  <form id="ponyForm" class="card" novalidate>
-    <label for="name">Your Name *</label>
-    <input id="name" name="name" type="text" required />
+    <form id="ponyForm" class="card" novalidate>
+      <div class="row">
+        <label for="name">Your Name *</label>
+        <input id="name" name="name" type="text" required placeholder="e.g. Alex Chen" />
+      </div>
 
-    <label for="email">Your Email *</label>
-    <input id="email" name="email" type="email" required />
+      <div class="row">
+        <label for="email">Your Email *</label>
+        <input id="email" name="email" type="email" required placeholder="alex@example.com" />
+      </div>
 
-    <label for="title">Pony Name *</label>
-    <input id="title" name="title" type="text" required />
+      <div class="row">
+        <label for="title">Pony Name *</label>
+        <input id="title" name="title" type="text" required placeholder="e.g. Stardust" />
+      </div>
 
-    <label for="file">Upload File *</label>
-    <input id="file" name="file" type="file" accept=".jpg,.jpeg,.png,.gif,.webp,.pdf" required />
-    <div class="muted">File size must be between <b>1&nbsp;MB</b> and <b>5&nbsp;MB</b>. Recommended: <b>150–300&nbsp;ppi</b> (Letter size scans are typically &gt; 1&nbsp;MB).</div>
+      <div class="row">
+        <label for="file">Upload File *</label>
+        <input id="file" name="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required />
+        <div class="help">File size must be between <strong>1 MB</strong> and <strong>5 MB</strong>.
+          Recommended: <strong>150–300 ppi</strong> (Letter size scans are typically &gt; 1 MB).</div>
+      </div>
 
-    <label for="desc">Description (optional)</label>
-    <textarea id="desc" name="description" placeholder="Tell us about your pony…"></textarea>
+      <div class="row">
+        <label for="desc">Description (optional)</label>
+        <textarea id="desc" name="description" placeholder="Tell us about your pony…"></textarea>
+      </div>
 
-    <div class="consent">
-      <input id="consent" name="consent" type="checkbox" value="true" required />
-      <label for="consent" style="font-weight:500;margin:0;">I agree to grant the school marketing rights to print, publicly display, and use my artwork for creative purposes.</label>
-    </div>
+      <div class="consent">
+        <input id="consent" name="consent" type="checkbox" value="true" required />
+        <label for="consent">I agree to grant the school marketing rights to print, publicly display, and use my artwork for creative purposes.</label>
+      </div>
 
-    <button id="submitBtn" type="submit">
-      <span class="btnlabel">Upload</span><span class="dots" style="display:none"></span>
-    </button>
-    <div id="status" class="status"></div>
-  </form>
+      <button id="submitBtn" class="btn" type="submit">
+        <span>Upload</span><span id="spinner" class=""></span>
+      </button>
 
-  <div class="gwrap card">
-    <div class="gtitle">Gallery</div>
-    <div id="gallery" class="grid"></div>
-    <div id="emptyNote" class="empty" style="display:none;">No items yet.</div>
-  </div>
-</div>
+      <div id="status" class="help" aria-live="polite"></div>
+    </form>
+
+    <section class="gallery">
+      <h2>Gallery</h2>
+      <div id="grid" class="grid" aria-live="polite">Loading…</div>
+    </section>
+  </main>
 
 <script>
-const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyS8EeAEoACk6HqauFS1y44kI7j20xmuTmIJPucYmtnCBBBSiQu_uSZ8vJGftIaHueFvA/exec'; // <- replace with your /exec
+/* ====== SET YOUR WEB APP URL ====== */
+const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyS8EeAEoACk6HqauFS1y44kI7j20xmuTmIJPucYmtnCBBBSiQu_uSZ8vJGftIaHueFvA/exec';
 
 const $ = id => document.getElementById(id);
-const btn = $('submitBtn'), dots = btn.querySelector('.dots'), label = btn.querySelector('.btnlabel');
 
-function setBusy(b){ btn.disabled=b; dots.style.display=b?'inline-block':'none'; label.textContent=b?'Uploading':'Upload'; }
-function ok(m){ $('status').innerHTML = `<span class="ok">${m}</span>`; }
-function err(m){ $('status').innerHTML = `<span class="err">${m}</span>`; }
+/* ---- size helpers ---- */
+const MIN_BYTES = 1 * 1024 * 1024;  // 1 MB
+const MAX_BYTES = 5 * 1024 * 1024;  // 5 MB
 
+/* ---- count ---- */
 async function refreshCount(){
-  try{ const r=await fetch(SCRIPT_URL+'?action=count',{cache:'no-store'}); const j=await r.json(); $('count').textContent=j.ok?(j.count??0):'—'; }
-  catch{ $('count').textContent='—'; }
+  try {
+    const r = await fetch(`${SCRIPT_URL}?action=count`, {cache:'no-store'});
+    const j = await r.json();
+    $('count').textContent = j.ok ? (j.count ?? 0) : '—';
+  } catch {
+    $('count').textContent = '—';
+  }
 }
 
-function imgProxy(id){ return `${SCRIPT_URL}?action=img&id=${encodeURIComponent(id)}`; }
-
+/* ---- gallery (list -> img proxy) ---- */
 async function refreshGallery(){
-  const box=$('gallery'), empty=$('emptyNote'); box.innerHTML=''; empty.style.display='none';
-  try{
-    let r=await fetch(SCRIPT_URL+'?action=list&limit=60',{cache:'no-store'}), j=await r.json();
-    if(!j.ok || !j.items || !j.items.length){ r=await fetch(SCRIPT_URL+'?action=drive_list&limit=60',{cache:'no-store'}); j=await r.json(); }
-    if(!j.ok || !j.items || !j.items.length){ empty.style.display='block'; return; }
+  const box = $('grid');
+  box.textContent = 'Loading…';
+  try {
+    // Try worksheet list first (keeps names/titles). If empty, fall back to drive_list.
+    let r = await fetch(`${SCRIPT_URL}?action=list&limit=60`, {cache:'no-store'});
+    let j = await r.json();
+    if (!j.ok || !Array.isArray(j.items) || j.items.length===0) {
+      const r2 = await fetch(`${SCRIPT_URL}?action=drive_list&limit=60`, {cache:'no-store'});
+      j = await r2.json();
+    }
 
-    j.items.forEach(it=>{
-      const fileId=(it.fileId||'').toString().trim();
-      const src = fileId ? imgProxy(fileId) : (it.directUrl || it.fileUrl || '');
-      const title=(it.title||'').trim(), name=(it.name||'').trim();
+    if (!j.ok) throw new Error(j.error || 'Failed to load');
 
-      const fig=document.createElement('figure'); fig.className='gcard';
-      const ph=document.createElement('div'); ph.className='ph';
-      const img=document.createElement('img'); img.loading='lazy'; img.alt=title||'Artwork'; img.src=src;
-      // last-chance fallback
-      img.onerror=function(){ if(this.__f)return; this.__f=true; if(it.fileUrl && it.fileUrl!==src){ this.src=it.fileUrl; this.style.objectFit='contain'; } };
-      ph.appendChild(img);
-      const cap=document.createElement('figcaption'); cap.className='gcap';
-      cap.innerHTML=`${title||'Untitled'}${name?` <span class="by">by ${name}</span>`:''}`;
-      fig.appendChild(ph); fig.appendChild(cap); box.appendChild(fig);
+    const items = j.items;
+    if (items.length === 0) { box.textContent = 'No items yet.'; return; }
+
+    box.innerHTML = '';
+    items.forEach(it => {
+      const src = it.fileId
+        ? `${SCRIPT_URL}?action=img&id=${encodeURIComponent(it.fileId)}`
+        : (it.directUrl || it.fileUrl || '');
+
+      const title = (it.title || '').trim();
+      const name  = (it.name  || '').trim();
+
+      const card = document.createElement('figure');
+      card.className = 'card';
+      card.innerHTML = `
+        <img loading="lazy"
+             src="${src}"
+             alt="${title || 'Artwork'}"
+             referrerpolicy="no-referrer"
+             onerror="this.onerror=null; this.src='${it.fileUrl || ''}'; this.style.objectFit='contain';" />
+        <figcaption>${title || 'Untitled'}${name ? ` <span class="by">by ${name}</span>` : ''}</figcaption>
+      `;
+      box.appendChild(card);
     });
-  }catch(e){ empty.style.display='block'; console.error('gallery error',e); }
+  } catch (err) {
+    box.textContent = 'Failed to fetch';
+    console.error(err);
+  }
 }
 
+/* ---- base64 helper (fallback) ---- */
 function fileToBase64(file){
-  return new Promise((resolve,reject)=>{
-    const fr=new FileReader();
-    fr.onload=()=>{const s=String(fr.result||''); const i=s.indexOf('base64,'); resolve(i>=0?s.slice(i+7):s);};
-    fr.onerror=()=>reject(fr.error||new Error('File read error'));
+  return new Promise((resolve, reject)=>{
+    const fr = new FileReader();
+    fr.onload = () => {
+      const s = String(fr.result || '');
+      const i = s.indexOf('base64,');
+      resolve(i >= 0 ? s.slice(i + 7) : s);
+    };
+    fr.onerror = () => reject(fr.error || new Error('File read error'));
     fr.readAsDataURL(file);
   });
 }
 
+/* ---- uploader ---- */
 $('ponyForm').addEventListener('submit', async (e)=>{
   e.preventDefault();
-  const f=$('file').files[0]; if(!f){ return err('Please choose a file.'); }
-  const mb=f.size/1048576; if(mb<1||mb>5){ return err('File must be between 1 MB and 5 MB.'); }
-  setBusy(true);
-  try{
-    // try multipart first
-    let fd=new FormData();
-    fd.append('name',$('name').value.trim());
-    fd.append('email',$('email').value.trim());
-    fd.append('title',$('title').value.trim());
-    fd.append('description',$('desc').value.trim());
-    fd.append('consent',$('consent').checked?'true':'false');
-    fd.append('file',f,f.name);
-    let r=await fetch(SCRIPT_URL,{method:'POST',body:fd});
-    let txt=await r.text(); let data; try{ data=JSON.parse(txt);}catch{ throw new Error('Server returned non-JSON'); }
+  const status = $('status');
+  const btn = $('submitBtn');
+  const spin = $('spinner');
 
-    // fallback to base64 if needed
-    if(!data.ok && /No file uploaded/i.test(data.error||'')){
-      const b64=await fileToBase64(f);
-      fd=new FormData();
-      fd.append('name',$('name').value.trim());
-      fd.append('email',$('email').value.trim());
-      fd.append('title',$('title').value.trim());
-      fd.append('description',$('desc').value.trim());
-      fd.append('consent',$('consent').checked?'true':'false');
-      fd.append('filebase64',b64);
-      fd.append('mimetype',f.type||'application/octet-stream');
-      fd.append('filename',f.name||'upload.bin');
-      r=await fetch(SCRIPT_URL,{method:'POST',body:fd});
-      txt=await r.text(); data=JSON.parse(txt);
+  status.textContent = '';
+  const file = $('file').files[0];
+  if (!file) { status.className='note-err'; status.textContent = 'Error: No file uploaded'; return; }
+  if (file.size < MIN_BYTES || file.size > MAX_BYTES) {
+    status.className = 'note-err';
+    status.textContent = 'Error: File must be between 1 MB and 5 MB.';
+    return;
+  }
+  if (!$('consent').checked) {
+    status.className='note-err'; status.textContent = 'Please check the consent box.'; return;
+  }
+
+  btn.disabled = true; spin.className = 'spinner';
+
+  try {
+    // (A) multipart first
+    const fd = new FormData();
+    fd.append('name', $('name').value.trim());
+    fd.append('email', $('email').value.trim());
+    fd.append('title', $('title').value.trim());
+    fd.append('description', $('desc').value.trim());
+    fd.append('consent', $('consent').checked ? 'true' : 'false');
+    fd.append('file', file, file.name); // IMPORTANT: 'file'
+
+    let r = await fetch(SCRIPT_URL, { method:'POST', body: fd });
+    let txt = await r.text();
+
+    // If Apps Script stripped files (rare CORS/host cases), fallback to base64
+    let data;
+    try { data = JSON.parse(txt); } catch { data = { ok:false, error:'Non-JSON response' }; }
+    if (!data.ok && data.diag && !data.diag.hasFilesObj) {
+      const b64 = await fileToBase64(file);
+      const fd2 = new FormData();
+      fd2.append('name', $('name').value.trim());
+      fd2.append('email', $('email').value.trim());
+      fd2.append('title', $('title').value.trim());
+      fd2.append('description', $('desc').value.trim());
+      fd2.append('consent', $('consent').checked ? 'true' : 'false');
+      fd2.append('filebase64', b64);
+      fd2.append('mimetype', file.type || 'application/octet-stream');
+      fd2.append('filename', file.name || 'upload.bin');
+
+      r = await fetch(SCRIPT_URL, { method:'POST', body: fd2 });
+      data = await r.json();
     }
 
-    if(data.ok){
-      ok('Upload successful!');
-      e.target.reset(); $('name').focus();
-      await refreshCount(); await refreshGallery();
-    }else{
-      err('Upload failed: '+(data.error||'Unknown error'));
-      console.warn('server diag:',data);
+    if (data.ok) {
+      status.className = 'note-ok';
+      const link = data.directUrl || data.fileUrl;
+      status.innerHTML = link
+        ? `Upload successful! <a href="${link}" target="_blank" rel="noopener">Open</a>`
+        : 'Upload successful!';
+      e.target.reset();
+      $('name').focus();
+      await refreshCount();
+      await refreshGallery();     // show the new one
+    } else {
+      throw new Error(data.error || 'Upload failed');
     }
-  }catch(ex){ console.error(ex); err('Error: '+ex.message); }
-  finally{ setBusy(false); }
+  } catch (err) {
+    console.error(err);
+    status.className = 'note-err';
+    status.textContent = `Error: ${err.message}`;
+  } finally {
+    btn.disabled = false; spin.className = '';
+  }
 });
 
+/* init */
 refreshCount();
 refreshGallery();
 </script>
